# ML-AI-Assistant-

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
data/.cache/: query_cache.json
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat  jsondiff  jsonpatch  jsonpointer
notebook/: document.ipynb
src/: __init__.py  agent.py  config.py  embeddings.py  ingest.py  retrieval.py  store.py
