[project]
name = "rag-ai"
version = "0.1.0"
description = "A local Retrieval-Augmented Generation system for PDF documents"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain",
    "langgraph",
    "chromadb",
    "pypdf",
    "pytest",
    "python-dotenv",
    "langchain-core",
    "langchain-community",
    "sentence-transformers",
    "torch",
    "google-generativeai",
]
